--- a/TheBourneChallenge/MovieList/View/MovieList.storyboard
+++ b/TheBourneChallenge/MovieList/View/MovieList.storyboard
@@ -17,9 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uEY-Gs-5Qf">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uEY-Gs-5Qf">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="KYn-Zx-Rcl" id="0oK-2X-so9"/>
                                     <outlet property="delegate" destination="KYn-Zx-Rcl" id="lWo-SY-hcs"/>
@@ -35,7 +35,15 @@
                             <constraint firstItem="xCn-0f-7Un" firstAttribute="bottom" secondItem="uEY-Gs-5Qf" secondAttribute="bottom" id="o8x-Ed-7qz"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Rc8-lY-KjU"/>
+                    <navigationItem key="navigationItem" id="Rc8-lY-KjU">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="tzz-HW-IXb">
+                            <color key="tintColor" systemColor="systemTealColor"/>
+                            <connections>
+                                <action selector="didTapRefresh:" destination="KYn-Zx-Rcl" id="ahh-L0-SEU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="uEY-Gs-5Qf" id="Ory-FM-6Hy"/>
                     </connections>
@@ -48,6 +56,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
